log
Thu 07 Sep 2023 12:15:25 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e9d8c96
Thu 07 Sep 2023 12:22:34 AM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
b70a66d
Thu 07 Sep 2023 12:35:44 AM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
08cb199
Thu 07 Sep 2023 07:01:50 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
356b8b1
Thu 07 Sep 2023 07:02:35 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:96:13: error: operation on ‘map->size’ may be undefined [-Werror=sequence-point]
   96 |   map->size = map->size--;
      |   ~~~~~~~~~~^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bbfddb3
Thu 07 Sep 2023 07:03:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:96:20: error: expected identifier before ‘&’ token
   96 |   map->size = map->&size--;
      |                    ^
Compilation failed
36ff7da
